# witnet-rust

./: Cargo.toml  build.dockerfile  empty_gen.json  fulano.txt  justfile  mkdocs.yml  witnet-rc7.toml  witnet_01.toml  witnet_02.toml  zutano.txt
config/: Cargo.toml
config/src/: lib.rs
core/src/: lib.rs
core/tests/: lib.rs
crypto/src/: lib.rs
crypto/tests/: lib.rs
data_structures/src/: error.rs  lib.rs  superblock.rs  transaction.rs
data_structures/src/chain/: mod.rs  tapi.rs
data_structures/tests/: lib.rs
docker/cross-compilation/aarch64-unknown-linux-gnu/: Dockerfile
docker/cross-compilation/arm-unknown-linux-gnueabihf/: Dockerfile
docker/cross-compilation/armv7-unknown-linux-gnueabihf/: Dockerfile
docker/cross-compilation/x86_64-unknown-linux-gnu/: Dockerfile
docker/debug-run/: Dockerfile
docs/architecture/rad/: object-notation.md
node/src/actors/chain_manager/: mining.rs
p2p/src/: lib.rs
p2p/tests/: lib.rs
rad_engine/: Cargo.toml
rad_engine/src/: lib.rs
rad_engine/src/engine/: engine.rs
rad_engine/src/rad_object_notation/: mod.rs  typesystem.rs
rad_engine/tests/: lib.rs
rad_engine/tests/engine/: engine.rs  rad_request_example.json
rad_engine/tests/rad_object_notation/: typesystem.rs
schemas/witnet/: witnet.proto
src/: main.rs  server.rs
src/cli/: rad_engine.rs
src/cli/node/: json_rpc_client.rs
storage/src/: lib.rs
storage/tests/: lib.rs
validations/src/: validations.rs
validations/src/tests/: mod.rs
wallet/src/: lib.rs  model.rs  types.rs
wallet/src/repository/: keys.rs
(+15 files in other folders)
