[package]
name = "witnet"
version = "0.1.0"
authors = ["Witnet Foundation <info@witnet.foundation>"]
publish = false
description = "An in-progress open source implementation of the Witnet protocol written in Rust."

[[bin]]
name = "witnet"
path = "src/bin/witnet.rs"

[dependencies]
clap = "2.31"

witnet_config = { path = "./config" }
witnet_core = { path = "./core" }
witnet_crypto = { path = "./crypto" }
witnet_data_structures = { path = "./data_structures" }
witnet_p2p = { path = "./p2p" }
witnet_storage = { path = "./storage" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3